Update Gemini model to gemini-3-flash
Changed the Gemini model configuration from 'gemini-2.5-flash-preview-09-2025' to 'gemini-3-flash' to use the latest available model.

--- a/home/colleges-universities/admin/index.html
+++ b/home/colleges-universities/admin/index.html
@@ -346,7 +346,7 @@ Consultei sua base de dados agora mesmo. Como posso ajudar você hoje?</div>
     let currentDollarRate = 5.0;
     
     // --- CONFIGURAÇÃO DO MODELO GEMINI ---
-    const geminiModel = "gemini-2.5-flash-preview-09-2025";
+    const geminiModel = "gemini-3-flash";
 
     // API KEY MANAGEMENT
     const apiKeyPlaceholder = ""; 
