--- a/home/colleges-universities/admin/index.html
+++ b/home/colleges-universities/admin/index.html
@@ -346,7 +346,7 @@ Consultei sua base de dados agora mesmo. Como posso ajudar você hoje?</div>
     let currentDollarRate = 5.0;
     
     // --- CONFIGURAÇÃO DO MODELO GEMINI ---
-    const geminiModel = "gemini-3-flash";
+    const geminiModel = "gemini-3-flash-preview";
 
     // API KEY MANAGEMENT
     const apiKeyPlaceholder = ""; 
